--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,15 @@
 /* styles go here */
+
+/* input {
+  margin-bottom: 10px;
+} */
+
+fieldset {
+  margin-bottom: 20px;
+  padding-bottom: 0;
+}
+
+.foarm-field {
+  margin-bottom: 10px;
+  display: block;
+}
