--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,9 @@
-fieldset {
+.field {
   margin-bottom: 20px;
   padding-bottom: 0;
 }
 
-.foarm-field {
+.form-field {
   margin-bottom: 10px;
   display: block;
 }
